2009-08-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src: Regenerate from Balloon3D-Plugins-ar.4.mcz
	DBus-Plugin-bf.32.mcz GStreamer-Plugins-JMM.16.mcz
	Kedama-Plugins-yo.1.mcz Rome-Plugin-yo.39.mcz
	OSProcessPlugin-dtl.16.mcz
	VMConstruction-Plugins-AioPlugin-dtl.9.mcz
	VMConstruction-Plugins-XDisplayControlPlugin-dtl.7.mcz
	VMMaker-dtl.137.mcz

2009-08-26    <piumarta@ubuntu.piumarta.com>

	* vm-display-X11/sqUnixX11.c (x2sqModifier): Do not map Caps Lock
	to shift modifier.

2009-08-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/OggPlugin/config.cmake: Do not build OggPlugin on MacOS
	X due to broken headers in the framework.

	* plugins/SqueakFFIPrims/config.cmake: Add missing argument when
	requiring libffi.

2009-08-26    <piumarta@netbsd.piumarta.com>

	* vm-sound-Sun/config.cmake: Require stropts.h and Solaris OS.

	* plugins/UUIDPlugin/config.cmake: Find libuuid but don't require it.

2009-08-26    <piumarta@solaris.piumarta.com>

	* plugins/PseudoTTYPlugin/config.cmake: Check for libutil and
	unix98 ptys independently.

	* vm-sound-Sun/config.cmake: Fail if head missing in both
	potential locations.

2009-08-27  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/GStreamerPlugin/config.cmake: Configure gstreamer via pkg-config.

2009-08-26  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/PseudoTTYPlugin/config.cmake: Disambiguate whether openpty found
	in libc and in libutil.

2009-08-26    <piumarta@ubuntu.piumarta.com>

	* plugins/SqueakFFIPrims/any-libffi.c: Include ffi.h unless
	HAVE_FFI_FFI_H is defined.

	* plugins/RomePlugin/config.cmake, plugins/UUIDPlugin/config.cmake,
	plugins/SqueakFFIPrims/config.cmake, plugins/OggPlugin/config.cmake,
	plugins/UnixOSProcessPlugin/config.cmake,
	plugins/GStreamerPlugin/config.cmake, plugins/DBusPlugin/config.cmake,
	plugins/SocketPlugin/config.cmake, vm-sound-ALSA/config.cmake,
	vm-sound-NAS/config.cmake, vm-display-fbdev/config.cmake,